[package]
name = "leptos_oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-beta" }
leptos_meta = { version = "0.5.0-beta" }
leptos_actix = { version = "0.5.0-beta", optional = true }
leptos_router = { version = "0.5.0-beta" }
oauth2 = "4.4.1"
actix-web = { version = "4", optional = true, features = ["macros"] }
dotenvy = { version = "0.15.7", optional = true }
http = "0.2.9"
serde = { version = "1.0.183", features = ["derive"] }
lazy_static = "1.4.0"
cfg-if = "1.0.0"
jsonwebtoken-google = { version = "0.1.6", optional = true }

[features]
ssr = [
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "dep:dotenvy",
    "leptos_router/ssr",
    "dep:jsonwebtoken-google"
]

hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
default = []
